# prelegal

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  catalog.json
backend/: pyproject.toml
backend/app/: config.py  db.py  main.py  schemas.py  security.py
backend/app/routers/: auth.py
backend/tests/: conftest.py  test_auth.py
frontend/: next.config.ts  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/signin/: page.tsx
frontend/src/app/signup/: page.tsx
frontend/src/components/: AuthStatus.tsx  NdaApp.tsx  NdaDocument.tsx  NdaForm.tsx
frontend/src/lib/: api.ts  mergeTemplate.ts  pdf.ts  templates.ts  types.ts
scripts/: start-linux.sh  start-windows.ps1  stop-linux.sh  stop-windows.ps1
templates/: LICENSE.txt
